resources/ext.PWA/PWA.css
.pwa-install-button {
  cursor: pointer; 
}

.pwa-disabled-install-button { /* Show the install button as disabled.*/
  cursor: not-allowed;
  opacity: 50%;
}

#pwa-overlay {
  position: fixed; 
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5); 
  z-index: 11;
  cursor: pointer; 
}

#pwa-overlay-text {
  position: absolute;
  top: 60%;
  left: 50%;
  font-size: 1.2em;
  color: white;
  transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  text-align: center;
  height: 100%;
}

#pwa-overlay-text > img {
  height: 50%;
  width: auto;
}

